# multitask-personalization

./: .gitignore  .pylintrc  README.md  pyproject.toml  run_autoformat.sh
.github/workflows/: ci.yml
experiments/: run_single_experiment.py
experiments/analysis/: analysis_utils.py  custom.mplstyle  plot_book_example.py  plot_cooking_models.py  plot_main_results.py  plot_real_results.py  plot_rom_prediction_error.py  pybullet_entropy_animation.py  pybullet_spherical_csp_analysis.py  tiny_csp_analysis.py  tiny_csp_explore_analysis.py
experiments/conf/: config.yaml
notebooks/: BookPreferenceLearningAnalysis.ipynb  BoundedBayesianClassifierAnalysis.ipynb  ExplorationAnalysis.ipynb
scripts/: combine_videos.py  create_book_cover_texture.py  grid_intake_horizon_experiment.py  intake_horizon_experiment.py  pybullet_handover_intake_horizon_experiment.py  pybullet_intake_horizon_experiment.py  video_pause.py  video_pause_on_rewards.py
src/multitask_personalization/: csp_generation.py  csp_solvers.py  feast_integration.py  structs.py  utils.py
tests/: test_csp_solvers.py  test_run_single_experiment.py  test_structs.py  test_utils.py
tests/envs/: test_cooking_csp.py  test_cooking_env.py  test_grid_mdp.py  test_grid_world.py  test_pybullet.py  test_pybullet_csp.py  test_pybullet_env.py  test_pybullet_handover.py  test_pybullet_skills.py  test_tiny_csp.py
tests/interaction/: test_random_interaction.py
tests/methods/: test_approach.py  test_csp_approach.py  test_random_actions_approach.py
tests/parameter_setting/: test_grid_world_parameter_setting.py
tests/policies/: test_grid_world_parameterized_policy.py
tests/rom/: test_base_rom.py  (+2 more)
(+202 files in other folders)
