[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "multitask_personalization"
version = "0.1.0"
description = "Multitask personalization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
   "matplotlib",
   "numpy",
   "scipy",
   "scikit-image",
   "imageio",
   "pandas",
   "pandas-stubs",
   "moviepy",
   "pybullet_helpers@git+https://github.com/tomsilver/pybullet-helpers.git",
   "gymnasium==1.0.0",
   "tomsutils@git+https://github.com/tomsilver/toms-utils.git",
   "pybullet@git+https://github.com/tomsilver/bullet3.git@link-limit-extension",
   "assistive_gym@git+https://github.com/tomsilver/assistive-gym.git",
   "task_then_motion_planning@git+https://github.com/tomsilver/task-then-motion-planning.git",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
multitask_personalization = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*"]
split_on_trailing_comma = true

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "scipy.*",
    "skimage.*",
    "assistive_gym.*",
    "pybullet.*",
]
ignore_missing_imports = true
